examples/test/testpolicy16122.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16122
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key20: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value15
          key15: value0
      podSelector:
        matchLabels:
          key33: value46
          key11: value41
          key23: value10
